--- a/index.html
+++ b/index.html
@@ -76,10 +76,9 @@
         let __audio = document.createElement("audio");
         // ❤️ 修改音乐在这里
         __audio.src = "../music/1.mp3";
-        __audio.play = true;
         __audio.loop = true;
         __audio.volume = 0.6;
-        //window.onclick = function() {__audio.play();};
+        window.onclick = function() {__audio.play();};
     </script>
     <script>
         let starCount = 1500;
