--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         let __audio = document.createElement("audio");
         // ❤️ 修改音乐在这里
         __audio.src = "../music/1.mp3";
-        __audio.autoplay = autoplay
+        __audio.play();
         __audio.loop = true;
         __audio.volume = 0.6;
         //window.onclick = function() {__audio.play();};
