--- a/index.html
+++ b/index.html
@@ -78,10 +78,7 @@
         __audio.src = "../music/1.mp3";
         __audio.loop = true;
         __audio.volume = 0.6;
-        document.addEventListener('DOMContentLoaded', function() {
-  __audio.play();
-});
-        //window.onclick = function() {__audio.play();};
+        window.onclick = function() {__audio.play();};
     </script>
     <script>
         let starCount = 1500;
