--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
 				<img src="img/iali57.gif" tppabs="img/iali57.gif" />
 				<h3>
 					<span id="text-54" contenteditable="true">我说考研考你那个学校</span>
-					<span id="text-55" contenteditable="true">你说我完了</span>
-					<span id="text-56" contenteditable="true">我是恋爱脑，还没恋爱就这样了</span>
+					<span id="text-55" contenteditable="true">你说我完了，是恋爱脑</span>
+					<span id="text-56" contenteditable="true">还没恋爱就这样了</span>
 					<span id="text-57" contenteditable="true">我好伤心...</span>
 				</h3>
 			</div>
