--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 				<p class="text">
 					<span id="text-73" contenteditable="true">程欣悦，我喜欢你</span><br />
 					<span id="text-74" contenteditable="true">不要在意别人的言语，不要在意别人的眼光</span><br />
-					<span id="text-74" contenteditable="true"></span>期待你日后的回应<br />
+					<span id="text-74" contenteditable="true"></span> 等你想明白后，期待你的应答<br />
 					<br />
 					<br />
 					<span> -- 按“Esc"键有惊喜（键盘左上角）</span>
